src/objects/AntiFraud__c.object
<CustomObject>
    <fields>
        <fullName>AntiFraud_Desc__c</fullName>
        <label>AntiFraud Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word1__c</fullName>
        <label>Key Word1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word2__c</fullName>
        <label>Key Word2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word3__c</fullName>
        <label>Key Word3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>AntiFraud</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AntiFraud_Desc__c</columns>
        <columns>City__c</columns>
        <columns>Key_Word1__c</columns>
        <columns>Key_Word2__c</columns>
        <columns>Key_Word3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AntiFraud Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>